fix overlapping borders

--- a/src/components/Gameboard/Gameboard.module.css
+++ b/src/components/Gameboard/Gameboard.module.css
@@ -5,10 +5,6 @@
   margin: 2rem 5%;
 }
 
-.hit {
-  width: 100%;
-}
-
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   .gameBoard {
     flex-direction: column-reverse;
