--- a/src/components/GridCell/GridCell.module.css
+++ b/src/components/GridCell/GridCell.module.css
@@ -5,7 +5,11 @@
 .gridSquare {
   background: white;
   width: 10%;
-  border: 1px solid rgb(152, 152, 152);
   aspect-ratio: 1/1;
   font-size: 0;
+}
+.emptySquare {
+  border: 1px solid rgb(152, 152, 152);
+  aspect-ratio: 1/1;
+  width: 100%;
 }
